--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
         <div class='container text-light'>
             <div class='row align-items-start justify-content-start'>
                 <div class='col-6'>
-                    <img class='img-fluid w-50 mt-5 mb-5 rounded' src="assets/images/weather.PNG" alt="">
+                   <a href="https://github.com/jcnolan9/weatherDashboard">
+                        <img class='img-fluid w-50 mt-5 mb-5 rounded' src="assets/images/weather.PNG" alt="">
+                   </a>
                 </div>
                 <div class='col-6'>
                     <h2 class='mt-5'>Weather Dashboard</h2>
-                    <p></p>
+                    <a href="https://jcnolan9.github.io/weatherDashboard/">
+                        <p>Link to deployed page</p>
+                    </a>
                 </div>
             </div> 
         </div>
@@ -79,11 +83,16 @@
         <div class='container'>
             <div class='row align-items-start justify-content-start'>
                 <div class='col-6'>
-                    <img class='img-fluid w-75 mt-5 mb-5 rounded' src="assets/images/workDay.PNG" alt="">
+                    <a href="https://github.com/jcnolan9/workDayPlanner">
+                        <img class='img-fluid w-75 mt-5 mb-5 rounded' src="assets/images/workDay.PNG" alt="">
+                    </a>
+                    
                 </div>
                 <div class='col-6'>
                     <h2 class='mt-5'>Workday Planner</h2>
-                    <p></p>
+                    <a href="https://jcnolan9.github.io/workDayPlanner/">
+                        <p>Link to deployed page</p>
+                    </a>
                 </div>
             </div> 
         </div>
@@ -93,18 +102,27 @@
         <div class='container text-light'>
             <div class='row align-items-start justify-content-start'>
                 <div class='col-6'>
-                    <img class='img-fluid w-75 mt-5 mb-5 rounded' src="assets/images/quiz1.PNG" alt="">
+                    <a href="https://github.com/jcnolan9/codeQuiz">
+                        <img class='img-fluid w-75 mt-5 mb-5 rounded' src="assets/images/quiz1.PNG" alt="">
+                    </a>
                 </div>
                 <div class='col-6'>
                     <h2 class='mt-5'>Code Quiz</h2>
-                    <p></p>
+                    <a href="https://jcnolan9.github.io/codeQuiz/">
+                        <p>Link to deployed page</p>
+                    </a>
                 </div>
             </div> 
         </div>
     </section>
 
     <footer>
-    
+        <div class='container d-flex mt-4'>
+            <a class='me-4 text-decoration-none' href="https://github.com/jcnolan9">Github</a>
+            <a class='me-4 text-decoration-none' href="https://www.linkedin.com/in/jordannolan14/">LinkedIn</a>
+            <p class='me-4'>Email</p> 
+            <p class='me-4'>(555) 555-5555</p>
+        </div>
     </footer>
 
 
