Adding descriptive text to projects in p tags

--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
                 </div>
                 <div class='col-6'>
                     <h2 class='mt-5'>Weather Dashboard</h2>
+                    <p>This Weather Dashboard lets you input the name of any city and see the current
+                        weather as well as a 5 day forecast for days ahead. The cities you search get saved
+                        so that you can check the weather again with the click of a button. This app uses a public
+                        REST API  to retrieve and display the weather results.
+                    </p>
                     <a href="https://jcnolan9.github.io/weatherDashboard/">
+                        
                         <p>Link to deployed page</p>
                     </a>
                 </div>
